force-app/main/default/objects/Vehicle__c/fields/Model_Year__c.field-meta.xml
<CustomField>
    <fullName>Model_Year__c</fullName>
    <label>Model Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1900</fullName>
            </value>
            <value>
                <fullName>1901</fullName>
            </value>
            <value>
                <fullName>1902</fullName>
            </value>
            <value>
                <fullName>1903</fullName>
            </value>
            <value>
                <fullName>1904</fullName>
            </value>
            <value>
                <fullName>1905</fullName>
            </value>
            <value>
                <fullName>1906</fullName>
            </value>
            <value>
                <fullName>1907</fullName>
            </value>
            <value>
                <fullName>1908</fullName>
            </value>
            <value>
                <fullName>1909</fullName>
            </value>
            <value>
                <fullName>1910</fullName>
            </value>
            <value>
                <fullName>1911</fullName>
            </value>
            <value>
                <fullName>1912</fullName>
            </value>
            <value>
                <fullName>1913</fullName>
            </value>
            <value>
                <fullName>1914</fullName>
            </value>
            <value>
                <fullName>1915</fullName>
            </value>
            <value>
                <fullName>1916</fullName>
            </value>
            <value>
                <fullName>1917</fullName>
            </value>
            <value>
                <fullName>1918</fullName>
            </value>
            <value>
                <fullName>1919</fullName>
            </value>
            <value>
                <fullName>1920</fullName>
            </value>
            <value>
                <fullName>1921</fullName>
            </value>
            <value>
                <fullName>1922</fullName>
            </value>
            <value>
                <fullName>1923</fullName>
            </value>
            <value>
                <fullName>1924</fullName>
            </value>
            <value>
                <fullName>1925</fullName>
            </value>
            <value>
                <fullName>1926</fullName>
            </value>
            <value>
                <fullName>1927</fullName>
            </value>
            <value>
                <fullName>1928</fullName>
            </value>
            <value>
                <fullName>1929</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>