force-app/main/default/objects/Vehicle__c/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>VIN#</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>